src/test/deca/syntax/invalid/else_inutile.deca
//  Description :
//            Structure ifthenelse avec un else sans bloc d'instructions
//
// Résultat:
//no viable alternative at input 'else}'
//
{
    if(bool){}
    else
}